fix contrast

--- a/src/index.css
+++ b/src/index.css
@@ -5,10 +5,10 @@
   --color-darker-background: #212121;
   --color-darker-gray: rgb(30, 30, 30);
   --color-dark-gray: rgb(29, 29, 29);
-  --color-light-gray: #f1f1f1;
+  --color-light-gray: #fff;
   --color-light-background: rgba(42, 42, 42, 0);
   --color-lighter-background: rgba(255, 255, 255, 0.8);
-  --color-white: #f1f1f1;
+  --color-white: #fff;
 }
 
 html,
@@ -775,10 +775,10 @@ main h2 {
   background-size: contain;
   background: linear-gradient(
     90deg,
-    rgba(0, 0, 0, 0.0001) 0%,
-    #888888 19.79%,
-    #666666 50%,
-    rgba(51, 51, 51, 0.6) 71.88%
+    rgba(0, 0, 0, 0) 0%,
+    #262020 17%,
+    #262020 50%,
+    #262020 71.88%
   );
 }
 
@@ -848,11 +848,11 @@ main h2 {
 }
 
 .thumbs-up-button {
-  background-color: #3cbbb4cc;
+  background-color: #1D5D5A;
 }
 
 .thumbs-down-button {
-  background-color: #fbbd4a;
+  background-color: #774F03;
 }
 
 .voteContainer {
@@ -910,13 +910,13 @@ main h2 {
 }
 
 .greenBar {
-  background-color: rgba(60, 187, 180, 1);
+  background-color: #1D5D5A;;
   height: 100%;
   padding-left: 16px;
 }
 
 .yellowBar {
-  background-color: rgba(249, 173, 29, 1);
+  background-color: #774F03;;
   height: 100%;
   padding-right: 16px;
 }
